--- a/M3ExploratoryDataAnalysis-lab(1).ipynb
+++ b/M3ExploratoryDataAnalysis-lab(1).ipynb
@@ -665,7 +665,7 @@
    "source": [
     "# your code goes here\n",
     "\n",
-    "#correlatopn between Age and numerical columns\n",
+    "#correlation between Age and numerical columns\n",
     "df[['Age']].corr()"
    ]
   },
